// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoreOrLess renders correctly when expanded 1`] = `
<div
  className="more-or-less more fancy-class-name"
  style={
    Object {
      "alignItems": undefined,
      "boxSizing": "border-box",
      "display": "flex",
      "flex": "0 0 auto",
      "flexDirection": "column",
      "flexWrap": "nowrap",
      "justifyContent": undefined,
      "minHeight": 0,
      "minWidth": 0,
    }
  }
>
  content
  <div
    className="expand-button"
    onClick={[Function]}
    style={
      Object {
        "alignItems": "center",
        "boxSizing": "border-box",
        "display": "flex",
        "flex": "0 0 auto",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "center",
        "minHeight": 0,
        "minWidth": 0,
      }
    }
  >
    angle-up
  </div>
</div>
`;

exports[`MoreOrLess renders correctly when not expanded 1`] = `
<div
  className="more-or-less less fancy-class-name"
  style={
    Object {
      "alignItems": undefined,
      "boxSizing": "border-box",
      "display": "flex",
      "flex": "0 0 auto",
      "flexDirection": "column",
      "flexWrap": "nowrap",
      "justifyContent": undefined,
      "minHeight": 0,
      "minWidth": 0,
    }
  }
>
  content
  <div
    className="expand-button"
    onClick={[Function]}
    style={
      Object {
        "alignItems": "center",
        "boxSizing": "border-box",
        "display": "flex",
        "flex": "0 0 auto",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "center",
        "minHeight": 0,
        "minWidth": 0,
      }
    }
  >
    angle-down
  </div>
</div>
`;
